fix: text align style

--- a/app/assets/stylesheets/project/index.scss
+++ b/app/assets/stylesheets/project/index.scss
@@ -188,7 +188,7 @@
                             }
                         }
                         .disc-text {
-                            text-align: center;
+                            text-align: justify;
                             .disc {
                                 color: #fff;
                                 font-size: 1.2em;
